Fix feedback loop in extension popup autosizing.

FrameViewAutoSizeInfo should not add hypothetical vertical scrollbar
space when we already have a real vertical scrollbar.

The real scrollbar is included in the LayoutView's preferred width
(since crrev.com/397112).  If the redundant accomodation makes the
scrollbar detectably unnecessary, the next autosize reduces the width,
making it appear again.

The autosized FrameView now accomodates exactly one vertical scrollbar
in this scenario, instead of infinitely bouncing between two and zero.
The scrollbar could actually be removed even at this size, but the code
isn't smart enough to detect that.

Bug: 838150
Change-Id: I23dce5a37faed33de978e1d2182009a2fe0c6fd1
Reviewed-on: https://chromium-review.googlesource.com/1188767
Reviewed-by: Stefan Zager <szager@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586062}
Former-commit-id: b9a5701869ce7cd4667ab0b0a29f185be311a5ba